<resources>
    <string name="app_name">CarRental</string>
    <string name="txt_head_favorites">Favorites</string>
    <string name="txt_head_explore">Explore..</string>
    <string name="txt_btn_explore">Explore all cars</string>
    <string name="brand_hint">Brand</string>
    <string name="model_hint">Model</string>
    <string name="hint_year">Year</string>
    <string name="seats_hint">Seats</string>
    <string name="doors_hint">Doors</string>
    <string name="price_hint">Price</string>
    <string name="upload_image_hint">Upload Image</string>
    <string name="save_menu">Save</string>
    <string name="txt_eur">\" EUR\"</string>
    <string name="eur_day">EUR/day</string>
    <string name="btn_detail_text">Detail</string>
    <string name="btn_profile_txt">Profile</string>
    <string name="txt_head_allcars">All Cars</string>
    <string name="edit_menu">Edit</string>
    <string name="hint_search">Search</string>
    <string name="btn_book_text">Book</string>
    <string name="btn_schedule_text">Schedule</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="txt_year">Year</string>
    <string name="txt_price">Price</string>
    <string name="txt_doors">Doors</string>
    <string name="txt_seats">Seats</string>
    <string name="txt_type">Type</string>
    <string name="txt_petrol">Fuel</string>
    <string name="txt_from">From</string>
    <string name="txt_till">Till</string>
    <string name="btn_next_text">Next</string>
    <string name="txt_head_confirmation">Confirmation</string>
    <string name="txt_car_capital">Car:</string>
    <string name="txt_type_capital">Type:</string>
    <string name="text_date_capital">Date:</string>
    <string name="dash">-</string>
    <string name="txt_price_capital">Price:</string>
    <string name="txt_btn_home">Home</string>
    <string name="btn_more_text">More</string>
    <string name="txt_checkbox_favorite">Favorite</string>
    <string name="txt_head_profiles">My Profile</string>
    <string name="txt_head_account">Account</string>
    <string name="txt_mail">Mail</string>
    <string name="txt_user">User</string>
    <string-array name="sort_types">
        <item>Name Asc</item>
        <item>Name Desc</item>
        <item>Price Asc</item>
        <item>Price Desc</item>
    </string-array>
</resources>