<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinnerBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin_standard"
        android:layout_marginEnd="@dimen/txt_margin_standard"
        android:layout_marginTop="@dimen/txt_margin_standard"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin_standard"
        android:layout_marginEnd="@dimen/txt_margin_standard"
        android:layout_marginTop="@dimen/txt_margin_standard"
        android:hint="@string/model_hint"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBrand" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/txt_margin_standard"
        android:layout_marginStart="@dimen/txt_margin_standard"
        android:layout_marginEnd="@dimen/txt_margin_standard"
        android:layout_marginBottom="@dimen/txt_margin_standard"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModel" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin_standard"
        android:layout_marginTop="@dimen/txt_margin_standard"
        android:ems="10"
        android:hint="@string/hint_year"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/txtSeats"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtSeats"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin_standard"
        android:layout_marginTop="@dimen/txt_margin_standard"
        android:ems="10"
        android:hint="@string/seats_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYear" />

    <EditText
        android:id="@+id/txtDoors"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin_standard"
        android:layout_marginTop="@dimen/txt_margin_standard"
        android:ems="11"
        android:hint="@string/doors_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeats" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin_standard"
        android:layout_marginTop="@dimen/txt_margin_standard"
        android:ems="10"
        android:hint="@string/price_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDoors" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_large2"
        android:layout_marginTop="@dimen/txt_margin_standard"
        android:layout_marginEnd="@dimen/btn_margin_large2"
        android:background="@drawable/gradient"
        android:text="@string/upload_image_hint"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:src="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDoors"
        app:layout_constraintTop_toTopOf="@+id/txtYear" />


</androidx.constraintlayout.widget.ConstraintLayout>