<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/fragmentCarBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_top"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentCarModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin_standard"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/fragmentCarBrand"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailLayoutBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_top"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:layout_marginEnd="@dimen/btn_margin_top"
        android:background="@drawable/bg_layout_radius_gray_full"
        android:paddingBottom="@dimen/btn_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCarBrand">

        <TextView
            android:id="@+id/fragmentCarPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_large3"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/detailLayoutBackground"
            app:layout_constraintTop_toTopOf="@id/detailLayoutBackground" />

        <TextView
            android:id="@+id/fragmentPerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_standard"
            android:text="@string/eur_day"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/fragmentCarPrice"
            app:layout_constraintTop_toTopOf="@+id/fragmentCarPrice" />

        <ImageView
            android:id="@+id/ic_doors"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="@dimen/btn_margin_large3"
            android:layout_marginTop="@dimen/btn_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentCarPrice"
            app:srcCompat="@drawable/ic_car_door_gray" />

        <TextView
            android:id="@+id/fragmentCarDoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_large3"
            android:text="@string/txt_doors"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_doors"
            app:layout_constraintStart_toEndOf="@+id/ic_doors" />

        <TextView
            android:id="@+id/fragmentCarDoorsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/btn_margin_large3"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_doors"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/line01"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/btn_margin_large3"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/btn_margin_large3"
            android:background="#d5d5d5"
            app:layout_constraintTop_toBottomOf="@+id/ic_doors" />

        <ImageView
            android:id="@+id/ic_seats"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/btn_margin_top"
            app:layout_constraintStart_toStartOf="@+id/ic_doors"
            app:layout_constraintTop_toBottomOf="@+id/line01"
            app:srcCompat="@drawable/ic_car_seat_gray" />

        <TextView
            android:id="@+id/fragmentCarSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_seats"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_seats"
            app:layout_constraintStart_toStartOf="@+id/fragmentCarDoors" />

        <TextView
            android:id="@+id/fragmentCarSeatsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_seats"
            app:layout_constraintEnd_toEndOf="@+id/fragmentCarDoorsInput" />

        <View
            android:id="@+id/line02"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/btn_margin_large3"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/btn_margin_large3"
            android:background="#d5d5d5"
            app:layout_constraintTop_toBottomOf="@+id/ic_seats" />

        <ImageView
            android:id="@+id/ic_type"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/btn_margin_top"
            app:layout_constraintEnd_toEndOf="@+id/ic_seats"
            app:layout_constraintStart_toStartOf="@+id/ic_seats"
            app:layout_constraintTop_toBottomOf="@+id/line02"
            app:srcCompat="@drawable/ic_type_gray" />

        <TextView
            android:id="@+id/fragmentCarType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:text="@string/txt_type"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_type"
            app:layout_constraintStart_toStartOf="@+id/fragmentCarSeats" />

        <TextView
            android:id="@+id/fragmentCarTypeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_type"
            app:layout_constraintEnd_toEndOf="@+id/fragmentCarSeatsInput" />

        <View
            android:id="@+id/line03"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/btn_margin_large3"
            android:layout_marginEnd="@dimen/btn_margin_large3"
            android:background="#d5d5d5"
            app:layout_constraintTop_toBottomOf="@+id/ic_type" />

        <ImageView
            android:id="@+id/ic_petrol"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="@dimen/btn_margin_top"
            app:layout_constraintStart_toStartOf="@+id/ic_seats"
            app:layout_constraintTop_toBottomOf="@+id/line03"
            app:srcCompat="@drawable/ic_petrol_gray" />

        <TextView
            android:id="@+id/fragmentCarPetrol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_petrol"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_petrol"
            app:layout_constraintStart_toStartOf="@+id/fragmentCarSeats" />

        <TextView
            android:id="@+id/fragmentCarPetrolInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_petrol"
            app:layout_constraintEnd_toEndOf="@+id/fragmentCarTypeInput" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>